# ToolBox_TODO

./: .gitignore  README.md  main.py  pyproject.toml  todo.py
TODO/: .gitignore  COMPARISON.md  OUTPUT_SYSTEM_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  README.md  TODO.md  config.json  config.toml  config.yaml  demo.py  main.py  pyproject.toml  requirements.txt  setup.sh  test_todo.py  todo.py  todo_config.toml
TODO/todo_manager/: __init__.py  cli.py  config.py  display.py  file_io.py  todo_manager.py
todo_cli/: __init__.py  cli.py  output.py  todo_manager.py
todo_manager/: __init__.py  cli.py  display.py  output.py  todo_manager.py  types.py
