[project]
name = "todo_cli"
dynamic = ["version"]
description = "Manage todo under home folder"
authors = [
    {name = "AMoment", email="amoment096@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "rich-argparse>=1.7.1",
    "toml>=0.10.2",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/A-moment096/ToolBox_TODO"
Issues = "https://github.com/A-moment096/ToolBox_TODO/issues"

[project.scripts]
todo = "todo_cli.cli:main"

[build-system]
requires = ["setuptools","setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "todo_cli/_version.py"
